--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -347,10 +347,10 @@ ul#milestone-list {
           padding-left: 15px;
       }
 
-      .resources-list {
+      .resources-list, .notes-list {
           margin: 0;
 
-          background-color: $peterriver;
+
           color: white;
           margin: 0 -10px 10px -15px;
 
@@ -382,6 +382,14 @@ ul#milestone-list {
 
 
 
+      }
+
+      .resources-list {
+          background-color: $peterriver;
+      }
+
+      .notes-list {
+          background-color: $sunflower;
       }
 
   }
