--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -69,6 +69,8 @@
                   <div class="clearfix">
                   </div>
               <% end %>
+              <% @milestone=e %>
+              <%= render 'notes/form' %>
             </li>
         <% end %>
       </ul>
