Primer implementacion de alfred-123

--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -66,6 +66,10 @@
                       <% end
                          end %>
 
+                  <% notas_extra = (e.notes.count - 1)
+                  if notas_extra > 0 %>
+                      +<%= notas_extra %><%= t('notes.more') %>
+                  <% end %>
                   <div class="clearfix">
                   </div>
               <% end %>
