--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -16,11 +16,12 @@
           <tbody>
           <% @milestone.each do |m| %>
               <tr>
-                <td><%= milestone_status_rej(m,:static) %>
-                <%= if m.status != 'rejected'
-                      milestone_status(m,:static)
-                    end %></td>
-
+                <td><% if can_modify_milestone?m.id %>
+                    <%= milestone_status_rej(m,:static) %>
+                    <%= if m.status != 'rejected'
+                          milestone_status(m,:static)
+                        end %>
+                  <% end %></td>
                 <td><%= link_to m.title, milestone_path(m), method: :get%></td>
                 <td><%= m.description.truncate(50) %></td>
                 <td><div class="calendar left"><%= m.due_date %></div></td>
