Arreglos en show milestones

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -354,6 +354,10 @@ ul#milestone-list {
 
           padding: 10px 15px;
 
+          .slider {
+              clear: both;
+          }
+
           h2 {
               font-size: 14px;
               margin: 0;
@@ -396,7 +400,9 @@ ul#milestone-list {
               clear: both;
           }
 
-
+          .link {
+              text-align: center;
+          }
       }
 
       .resources-list {
@@ -412,6 +418,7 @@ ul#milestone-list {
               margin: 0 -20px;
               padding: 20px;
           }
+
       }
 
   }
