--- a/app/assets/javascripts/timeline.js.erb
+++ b/app/assets/javascripts/timeline.js.erb
@@ -4,10 +4,10 @@ $().ready(function() {
     ".notes-list .toggle-documents, .notes-list h2").click(function(e) {
     var obj = $(this).parent().children(".toggle-documents");
 
-      if($(this).parent().children("ul").length == 0)
+      if($(this).parent().children(".slider").length == 0)
         return;
 
-    var list = obj.siblings("ul");
+    var list = obj.siblings(".slider");
 
     if(list.is(":hidden")) {
         obj.removeClass("glyphicon-chevron-down");
@@ -20,6 +20,6 @@ $().ready(function() {
   list.slideToggle();
 
   });
-    $(".resources-list ul, .notes-list ul").hide();
+    $(".resources-list .slider, .notes-list .slider").hide();
     $(".toggle-documents, .notes-list").parent().children("h2").addClass("pointer");
 });
