--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -1,4 +1,10 @@
 
+#btnListMilestones{
+    float: right;
+    margin-bottom: 10px;
+}
+
+
 #milestone-info {
     min-height: 250px;
     display: flex;
