--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -6,6 +6,14 @@
     background-color: white;
     position: relative;
 
+    a {
+        color: $alizarin;
+        text-decoration: none;
+    }
+    a:hover {
+        color: $alizarin-dark;
+    }
+
     h1 {
         color:white;
         text-align: center;
