cambio de titulo de hitos pendientes a vencidos

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="card-col col-lg-5">
       <div class="card pending">
-        <h1><%= t('milestones.pendings') %></h1>
+        <h1><%= t('milestones.overcomes') %></h1>
         <% if @overcomes and not @overcomes.empty? %>
             <ul id="pending-list">
               <% @overcomes.each do |e| %>
