--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -10,10 +10,12 @@
     <ul id="milestone-list">
       <% @milestones.each do |e| %>
           <li>
-            <%= if e.status != 'rejected'
-                  milestone_status(e,:right)
-                end %>
-            <%= milestone_status_rej(e, :right) %>
+            <% if can_modify_milestone?e.id %>
+              <%= if e.status != 'rejected'
+                    milestone_status(e,:right)
+                  end %>
+              <%= milestone_status_rej(e, :right) %>
+            <%end%>
             <h2><%=link_to e.title, e, method: :get%></h2>
             <p><%=t(e.description) %></p>
 
