--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -2,7 +2,6 @@
 .table-container {
     margin-top: 30px;
     border-bottom: 3px solid $alizarin;
-    //padding: 0px 30px 30px 30px;
     background-color: white;
     position: relative;
 
@@ -32,18 +31,10 @@
 
             cursor: pointer;
 
-            &:hover {
-                background-color: rgba(255, 233, 227, 1);
-            }
-
-            .sorting_desc {
-
-            }
-
-            .sorting_asc {
-
-            }
         }
+    }
+    .calendar{
+        margin-left: 0px;
     }
 
     .dataTables_filter {
