--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -4,46 +4,58 @@
 
       <div class="table-container">
         <h1><%= t('milestones.header') %></h1>
-        <table class="table datatable" data-info="false">
+        <table class="table datatable table-striped" id="hitos" data-info="false">
           <thead>
-              <tr>
-                <td></td>
-                <td><%= t('milestones.title') %></td>
-                <td><%= t('milestones.description') %></td>
-                <td><%= t('milestones.due_date') %></td>
-              </tr>
+          <tr>
+            <td><%= t('milestones.state') %></td>
+            <td><%= t('milestones.title') %></td>
+            <td><%= t('milestones.description') %></td>
+            <td><%= t('milestones.due_date') %></td>
+            <td><%= t('milestones.actions') %></td>
+          </tr>
           </thead>
           <tbody>
           <% @milestone.each do |m| %>
               <tr>
                 <td><%= milestone_status_rej(m,:static) %>
-                <%= if m.status != 'rejected'
-                      milestone_status(m,:static)
-                    end %></td>
-
-                <td><%= link_to m.title, milestone_path(m), method: :get%></td>
-                <td><%= m.description.truncate(50) %></td>
-                <td><div class="calendar left"><%= m.due_date %></div></td>
-                <% if can_modify_milestone? m.id %>
-                <td><%= link_to edit_milestone_path(m) do%>
-                    <span class='large-text glyphicon glyphicon-pencil'></span>
-                  <% end %>
+                  <%= if m.status != 'rejected'
+                        milestone_status(m,:static)
+                      end %>
                 </td>
-                <td><%= link_to milestone_path(m),
-                                method: :delete,
-                                data: { confirm: t('milestones.delete.sure') } do %>
-                      <span class='large-text glyphicon glyphicon-remove'></span>
+                <td>
+                  <%= link_to m.title, milestone_path(m), method: :get%>
+                </td>
+                <td>
+                  <%= m.description.truncate(50) %>
+                </td>
+                <td>
+                  <div class="calendar left"><%= m.due_date %></div>
+                </td>
+                <td>
+                  <% if can_modify_milestone? m.id %>
+                      <%= link_to edit_milestone_path(m) do%>
+                          <span class='large-text glyphicon glyphicon-pencil'></span>
                       <% end %>
-                </td>
-                <%end%>
 
+                      <%= link_to milestone_path(m),
+                                  method: :delete,
+                                  data: { confirm: t('milestones.delete.sure') } do %>
+                          <span class='large-text glyphicon glyphicon-remove'></span>
+                      <% end %>
+                  <%end%>
+                </td>
               </tr>
           <% end %>
           </tbody>
         </table>
       </div>
-
-
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
   </div>
 </div>
+
