--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -43,7 +43,7 @@
                       <%= link_to milestone_path(m),
                                   method: :delete,
                                   data: { confirm: t('milestones.delete.sure') } do %>
-                          <span class='large-text glyphicon glyphicon-remove'></span>
+                          <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
                   <%end%>
                 </td>
