--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -6,7 +6,7 @@
     <%= form_for([@category]) do |c| %>
         <div class="form-group">
           <%= c.label t('categories.name'), class: "control-label" %>
-          <%= c.text_field :name, class: "form-control", 'data-validation':"required" %>
+          <%= c.text_field :name, class: "form-control", 'data-validation':"required check_name" %>
         </div>
 
         <div class="form-group">
