--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -74,6 +74,10 @@
     font-size: 13px;
   }
 
+  h4 {
+    text-transform: uppercase;
+  }
+
 }
 
 ul#skills {
@@ -247,6 +251,7 @@ ul#mentors {
         float: right;
         font-size: 12px;
         line-height: 1.8;
+        text-transform: uppercase;
       }
 
       p {
