--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -76,6 +76,14 @@
         width: 100%;
     }
 
+
+}
+
+.milestone-last-update{
+    font-size: 10px;
+    font-weight:bold;
+    color: #999999;
+    float: right;
 }
 
 #milestone-notes {
