--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -71,7 +71,7 @@
                       <%= m.label t('milestones.cannot_assign')%>
                   <%else%>
                       <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
-                      <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, 'data-validation':"required", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%;') %>
+                      <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-validation':"required", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%;') %>
                   <%end%>
                 </div>
               </div>
@@ -116,7 +116,11 @@ if ($('.category').find('option:selected').text()!='Feedback') {
     });
 
     // Setup form validation
-    $.validate();
+    $.validate({
+        modules: 'html5, date',
+        lang: '<%= I18n.locale %>',
+       /* ignore: ":hidden:not(select)"*/
+    });
 </script>
 
 <script>
@@ -160,3 +164,4 @@ if ($('.category').find('option:selected').text()!='Feedback') {
     });
 
 </script>
+
