--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="card-col col-xs-12">
-      <%= link_to '/milestones/' do %>
+      <%= link_to '/milestones' do %>
           <button type="button" id="btnListMilestones" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-th-list"></span>  <%=t('milestones.see_all')%></button>
       <%end%>
     </div>
